@@ -2,17 +2,17 @@
 Hash: SHA256
 
 DIST kde-runtime-4.10.5.tar.xz 7233124 SHA256 fd42c9f1de38ccbc176b73d13059fec9b1cd0b50d40191a0d2b065eca5065c35 SHA512 7d3a0fbe27e0f8c8a5adf6ca43e20b9b9199246d597838872e387adb9a9f5af1bf28cc117fcbde51f803c6514c8088c648c4c6685d63cb616a1711bd01296ddd WHIRLPOOL b756e006e81b3ecf75ece060060d2ab64f8de803cb03b5f894e4ecfa393ee05cc212609f5951382c0af97f2582fc7e5c1fa84addc581595f48fcfeff33574e6f
-EBUILD kdebase-kioslaves-4.10.5.ebuild 1367 SHA256 1d074fb94b2013330605bedff405582281cfee31a8840533818bf4b91e63bf80 SHA512 02056085e9caccbf1396777158e67ebb41133a9f8f062e2a3b73382262b90ddcaa2dbb2e8ad86566de77fc7d14a9b221a20a296a56a9c49ca79995b77dfd5854 WHIRLPOOL e1210a77c4eba44b919b80d8d43eac52390c5fb7ed211951e3049fd91e48438eaf8b548b562543de029774242702131896f087b826c10b09c854c52d5c2c1b0e
-MISC ChangeLog 44867 SHA256 7d1934a56177d14f5965145b66387471723b941c9ed3a99647a92a57a5c72fe7 SHA512 af8da083dec365cb35e293e980e869413f38c7499d3c0d22adaaf956c8bd5ce1f5e255d6e11aecd51999cc6e735efbfb050eff0acee3a63bc8fd9cc975864705 WHIRLPOOL 720b7c872d65b1b81d77327cbd42e8c9e32bbee3e75d5c8086d4b7b3d0a2318d860c19614e7b718cf26503574883c1d893e4e7f7d0a920c308cebdbee27b4f18
+EBUILD kdebase-kioslaves-4.10.5.ebuild 1390 SHA256 0a7699819f6968c5d86173a83fde6811203257327c1ec16f3ccc591777fa9b6e SHA512 373a5757e8d323a66a602ef220e96003f96bf986681415a8c9c26fb30ff3ab09ea29fc54aa175a99807eefb17d7411840fd010e5be441c2c6964da7dd8bbaffb WHIRLPOOL 660bdc092bf23e9ab00e357532ff8476c94bd7e8d0dae03b6c6619434ec60926ce859ecf050c18df65029ae9ae34039f50475a28515541471410dd974d90dda6
+MISC ChangeLog 45007 SHA256 7eb9c535bd362d4ad6b550c337ff3bdfef54035372a244ae48f74e465621edea SHA512 e8cbd345ac3f91a377f0a9a5443c16d0e35c26cd884b1e2d082e4f1217cbd668ee7a398d4c7a49f5dcadb1422922fadc6ce86cf6c60e0c1a4a1f2f59752aaa3f WHIRLPOOL 29cfa266f33f16e2ed3625113032c3f3257c9e9324c8a9c7e73314645d2458290e01d696a366e5e04b755078b4b0148ce379b7a77b52a26dae884b24f1c23bca
 MISC metadata.xml 257 SHA256 1d6b1fefc7cad1cf2b72338e3bb02748bedcd90518c489af24d61f7c97be6304 SHA512 cd94fb978095572c43a2ab0c04017703a80ceb0268aca5665730f1a4d2b1ae80f13fb988bc82322a465aaec2c3b262329707d1bd808b52e2aaac0a448a7ba256 WHIRLPOOL 2bd3495d239b9641cdf515692d21aad369e78baf46c150221d69af4b97f4bab950b9726cfdf512811faa66c370369d788c835fe8d583a099cb4636040591690e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJR++qUAAoJEO+t9ga+3I3a0R4H/jCyJ0BKySt79pXG+9ebgKZp
-VznThWTCpKtjXUfTMCHielgZYpmkNQBHRQDOg++mRME5u7kYmEWIzpzj5fawM3X2
-DpgfY9MKk8/7IITJgJ6kGqQzLBKqemz/91vDTTmVA9rmqPxtSQV9LiozXMvaVYQT
-qOHTsIJMtUzQ+d2VyialVmfiYlCFflpsUGVe4mgjEtOYD9xasEoJWv5JHBq2J0DD
-AZYBcORH/iEGXOzjow6zyx7dyIRlx9ff9Lmxa9dgbss5thHafJ3Adk9t1j+BKvwY
-ogza33uj9qzRfH7D38MKY1/NZsK3UZ7KbWoFzOSft4Vu4vmWK6BXDwCl89DnUKw=
-=LuRW
+iQEcBAEBCAAGBQJSCN3EAAoJEMbwO6tnXQ0sCKYIAIEOHBWh0huAVDCA0uVpKGFY
+DB6ML5OmOZLW+AJ/tHJohlKoqawvDS154oAKaCH6XALp9wmZiit/uqw3xIUhSzdy
+Lr8QNaHiX8lOsKtDH5iu/vRo27hzPfUxGeQspypwWoXU/OyENfmvmk0XS4hQIh3D
+Ct/0jWYLfyjxG9vM/yPJKnYoWF04Q5NQK/GUOu/abgC15dTlYsp7xm5hoGzdJBsF
+qmFrsnUYJPjFDKqXFzpiBSvcz6Rj7mPPM0ZCJG3e4US0BOeWSWQ339flQsSJfHmv
+7Dlc2AN4GTWVy1o7Tu8asDEB6khj40ia37AmpdoILhd+8eAA7YM902Rub4L22/A=
+=gtfR
 -----END PGP SIGNATURE-----
