@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup test unpack
-DEPEND=!aqua? ( x11-libs/libXcursor ) bzip2? ( app-arch/bzip2 ) exif? ( media-gfx/exiv2 ) openexr? ( media-libs/openexr:= ) samba? ( || ( <net-fs/samba-4.0.0_alpha1[smbclient] >=net-fs/samba-4.0.0_alpha1[client] ) ) sftp? ( >=net-libs/libssh-0.4.0:=[sftp] ) >=sys-apps/sed-4 sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) dev-util/automoc virtual/pkgconfig !aqua? ( >=x11-libs/libXtst-1.1.0 x11-proto/xf86vidmodeproto ) handbook? ( app-text/docbook-xml-dtd:4.2 app-text/docbook-xsl-stylesheets ) dev-lang/perl >=dev-qt/qt3support-4.8.0:4[accessibility] >=dev-qt/qtcore-4.8.0:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.0:4 || ( ( >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] dev-qt/designer:4[-phonon] ) <dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] ) >=dev-qt/qtscript-4.8.0:4 >=dev-qt/qtsql-4.8.0:4[qt3support] >=dev-qt/qtsvg-4.8.0:4 >=dev-qt/qttest-4.8.0:4 >=dev-qt/qtwebkit-4.8.0:4 !aqua? ( x11-libs/libXext x11-libs/libXt x11-libs/libXxf86vm x11-libs/libXcomposite x11-libs/libxkbfile ) >=kde-base/kdelibs-4.10.5:4[aqua=] >=media-libs/qimageblitz-0.0.4
+DEPEND=virtual/jpeg:0 !aqua? ( x11-libs/libXcursor ) bzip2? ( app-arch/bzip2 ) exif? ( media-gfx/exiv2 ) openexr? ( media-libs/openexr:= ) samba? ( || ( <net-fs/samba-4.0.0_alpha1[smbclient] >=net-fs/samba-4.0.0_alpha1[client] ) ) sftp? ( >=net-libs/libssh-0.4.0:=[sftp] ) >=sys-apps/sed-4 sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) dev-util/automoc virtual/pkgconfig !aqua? ( >=x11-libs/libXtst-1.1.0 x11-proto/xf86vidmodeproto ) handbook? ( app-text/docbook-xml-dtd:4.2 app-text/docbook-xsl-stylesheets ) dev-lang/perl >=dev-qt/qt3support-4.8.0:4[accessibility] >=dev-qt/qtcore-4.8.0:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.0:4 || ( ( >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] dev-qt/designer:4[-phonon] ) <dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] ) >=dev-qt/qtscript-4.8.0:4 >=dev-qt/qtsql-4.8.0:4[qt3support] >=dev-qt/qtsvg-4.8.0:4 >=dev-qt/qttest-4.8.0:4 >=dev-qt/qtwebkit-4.8.0:4 !aqua? ( x11-libs/libXext x11-libs/libXt x11-libs/libXxf86vm x11-libs/libXcomposite x11-libs/libxkbfile ) >=kde-base/kdelibs-4.10.5:4[aqua=] >=media-libs/qimageblitz-0.0.4
 DESCRIPTION=kioslave: the kde VFS framework - kioslave plugins present a filesystem-like view of arbitrary data
 EAPI=5
 HOMEPAGE=http://www.kde.org/
 IUSE=+bzip2 exif debug lzma openexr samba +sftp +handbook aqua
 KEYWORDS=amd64 ~arm ppc ppc64 x86 ~amd64-linux ~x86-linux
 LICENSE=GPL-2
-RDEPEND=!aqua? ( x11-libs/libXcursor ) bzip2? ( app-arch/bzip2 ) exif? ( media-gfx/exiv2 ) openexr? ( media-libs/openexr:= ) samba? ( || ( <net-fs/samba-4.0.0_alpha1[smbclient] >=net-fs/samba-4.0.0_alpha1[client] ) ) sftp? ( >=net-libs/libssh-0.4.0:=[sftp] ) >=kde-base/kdelibs-4.10.5:4[aqua=,bzip2?,lzma?] >=kde-base/kdialog-4.10.5:4[aqua=] virtual/ssh !aqua? ( !kernel_SunOS? ( virtual/eject ) ) >=kde-base/oxygen-icons-4.10.5:4[aqua=] handbook? ( >=kde-base/kdelibs-4.10.5:4[aqua=,handbook] ) dev-lang/perl >=dev-qt/qt3support-4.8.0:4[accessibility] >=dev-qt/qtcore-4.8.0:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.0:4 || ( ( >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] dev-qt/designer:4[-phonon] ) <dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] ) >=dev-qt/qtscript-4.8.0:4 >=dev-qt/qtsql-4.8.0:4[qt3support] >=dev-qt/qtsvg-4.8.0:4 >=dev-qt/qttest-4.8.0:4 >=dev-qt/qtwebkit-4.8.0:4 !aqua? ( x11-libs/libXext x11-libs/libXt x11-libs/libXxf86vm x11-libs/libXcomposite x11-libs/libxkbfile ) >=kde-base/kdelibs-4.10.5:4[aqua=] >=media-libs/qimageblitz-0.0.4
+RDEPEND=virtual/jpeg:0 !aqua? ( x11-libs/libXcursor ) bzip2? ( app-arch/bzip2 ) exif? ( media-gfx/exiv2 ) openexr? ( media-libs/openexr:= ) samba? ( || ( <net-fs/samba-4.0.0_alpha1[smbclient] >=net-fs/samba-4.0.0_alpha1[client] ) ) sftp? ( >=net-libs/libssh-0.4.0:=[sftp] ) >=kde-base/kdelibs-4.10.5:4[aqua=,bzip2?,lzma?] >=kde-base/kdialog-4.10.5:4[aqua=] virtual/ssh !aqua? ( !kernel_SunOS? ( virtual/eject ) ) >=kde-base/oxygen-icons-4.10.5:4[aqua=] handbook? ( >=kde-base/kdelibs-4.10.5:4[aqua=,handbook] ) dev-lang/perl >=dev-qt/qt3support-4.8.0:4[accessibility] >=dev-qt/qtcore-4.8.0:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.0:4 || ( ( >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] dev-qt/designer:4[-phonon] ) <dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] ) >=dev-qt/qtscript-4.8.0:4 >=dev-qt/qtsql-4.8.0:4[qt3support] >=dev-qt/qtsvg-4.8.0:4 >=dev-qt/qttest-4.8.0:4 >=dev-qt/qtwebkit-4.8.0:4 !aqua? ( x11-libs/libXext x11-libs/libXt x11-libs/libXxf86vm x11-libs/libXcomposite x11-libs/libxkbfile ) >=kde-base/kdelibs-4.10.5:4[aqua=] >=media-libs/qimageblitz-0.0.4
 RESTRICT=test
 SLOT=4
 SRC_URI=mirror://kde/stable/4.10.5/src/kde-runtime-4.10.5.tar.xz
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	cmake-utils	92319f03251f1235bc887cc84e5aef21	eutils	63afaaed8aa819fdcb814c7cd39495a2	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	d900015de4e092f26d8c0a18b6bd60de	gnome2-utils	794d2847b4af390a1e020924876c8297	kde4-base	684548af88a5862d20f84ed8a7bd6771	kde4-functions	15a03918f0eeff5a485782ae76d5b639	kde4-meta	7361710ef31f9b5d0a1f8393eb117897	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=ed4b4a5e719b9d297364f49ff93a603e
+_md5_=5f229799afb620a41ead2a561fbda561
