@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/eudev
 # Copyright 1999- Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/eudev/ChangeLog,v 1.63 2013/08/10 13:21:37 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/eudev/ChangeLog,v 1.64 2013/08/12 13:26:20 blueness Exp $
+
+  12 Aug 2013; Anthony G. Basile <blueness@gentoo.org> eudev-1.1.ebuild:
+  Stable ppc ppc64, bug #463910
 
   10 Aug 2013; Agostino Sarubbo <ago@gentoo.org> eudev-1.1.ebuild:
   Stable for x86, wrt bug #463910
