@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdebase-kioslaves
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase-kioslaves/ChangeLog,v 1.321 2013/08/02 17:19:57 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase-kioslaves/ChangeLog,v 1.322 2013/08/12 13:08:25 kensington Exp $
+
+  12 Aug 2013; Michael Palimaka <kensington@gentoo.org>
+  kdebase-kioslaves-4.10.5.ebuild:
+  Add missing dependency wrt bug #480450.
 
   02 Aug 2013; Johannes Huber <johu@gentoo.org>
   -kdebase-kioslaves-4.10.4.ebuild:
